# hirschgarten

./: .bazelrc  MODULE.bazel  WORKSPACE.bzlmod
.codecanvas/: installPlugins.sh  (+1 more)
plugin-bsp/: .bazelrc  BUILD  MODULE.bazel  build.gradle.kts  maven_install.json  versions.bzl
plugin-bsp/buildSrc/src/main/kotlin/: versions.kt
plugin-bsp/performance-testing/: BUILD
plugin-bsp/performance-testing/src/test/kotlin/org/jetbrains/bsp/performance/testing/: BazelTest.kt
plugin-bsp/protocol/src/main/kotlin/org/jetbrains/bsp/protocol/utils/: Parsers.kt
plugin-bsp/src/: BUILD
plugin-bsp/src/main/kotlin/org/jetbrains/plugins/bsp/android/: BspAndroidModuleSystem.kt  BspAndroidProjectSystem.kt  BspProjectSystemBuildManager.kt
plugin-bsp/src/main/kotlin/org/jetbrains/plugins/bsp/android/run/: AndroidBspRunHandler.kt  BspAndroidConfigurationExecutor.kt  BspAndroidProgramRunner.kt  MobileInstallBeforeRunTaskProvider.kt
plugin-bsp/src/main/kotlin/org/jetbrains/plugins/bsp/building/task/: BspProjectTaskRunner.kt
plugin-bsp/src/main/kotlin/org/jetbrains/plugins/bsp/config/: BspFeatureFlags.kt  BspProjectAware.kt  BspWorkspace.kt
plugin-bsp/src/main/kotlin/org/jetbrains/plugins/bsp/extension/points/: BuildTargetClassifierExtension.kt  BuildToolWindowTargetActionProviderExtension.kt  GoSdkGetterExtension.kt  PythonSdkGetterExtension.kt
plugin-bsp/src/main/kotlin/org/jetbrains/plugins/bsp/flow/open/: BspStartupActivity.kt
plugin-bsp/src/main/kotlin/org/jetbrains/plugins/bsp/flow/sync/: BaseProjectSync.kt  BigProjectSyncHook.kt  GoProjectSync.kt  ProjectSyncHook.kt  ProjectSyncTask.kt  PythonProjectSync.kt
plugin-bsp/src/main/kotlin/org/jetbrains/plugins/bsp/intellij/: BuildPluginBeforeRunTaskProvider.kt  CopyPluginToSandboxBeforeRunTaskProvider.kt  IntellijPluginDebuggerRunner.kt  IntellijPluginRunHandler.kt  IntellijPluginRunHandlerProvider.kt  IntellijPluginRunHandlerState.kt
plugin-bsp/src/main/kotlin/org/jetbrains/plugins/bsp/jvm/: BspJvmDebugRunner.kt  JvmBspRunHandler.kt
plugin-bsp/src/main/kotlin/org/jetbrains/plugins/bsp/magicmetamodel/: MagicMetaModel.kt  MagicMetaModelLeftovers.kt
plugin-bsp/src/main/kotlin/org/jetbrains/plugins/bsp/magicmetamodel/impl/: DefaultMagicMetaModelState.kt  TargetIdToModuleEntitiesMap.kt
plugin-bsp/src/main/kotlin/org/jetbrains/plugins/bsp/performance/testing/: MemoryProfiler.kt
plugin-bsp/src/main/kotlin/org/jetbrains/plugins/bsp/projectStructure/: ProjectStructureProvider.kt  ProjectStructureUpdater.kt
plugin-bsp/src/main/kotlin/org/jetbrains/plugins/bsp/projectStructure/workspaceModel/: PythonProjectStructureUpdater.kt  TestUpdater.kt  WorkspaceModelProjectStructure.kt  WorkspaceModelProjectStructureProvider.kt
plugin-bsp/src/main/kotlin/org/jetbrains/plugins/bsp/run/: BspCommandLineStateBase.kt  BspProcessHandler.kt  BspRunCommandLineState.kt  BspRunConfigurationState.kt  BspRunHandler.kt  BspRunHandlerProvider.kt  BspTaskListener.kt
plugin-bsp/src/main/kotlin/org/jetbrains/plugins/bsp/run/commandLine/: BspRunCommandLineState.kt  BspTestCommandLineState.kt  Utils.kt
plugin-bsp/src/main/kotlin/org/jetbrains/plugins/bsp/services/: BspTaskEventsService.kt
plugin-bsp/src/main/kotlin/org/jetbrains/plugins/bsp/utils/: ModuleNameProviderTools.kt
plugin-bsp/src/main/resources/messages/: BspPluginBundle.properties
plugin-bsp/src/main/xml/: base.xml  bsp-withAndroid.xml  bsp-withDevKit.xml  bsp-withGo.xml  bsp-withPython.xml
plugin-bsp/src/test/kotlin/org/jetbrains/plugins/bsp/projectStructure/: AllProjectStructuresDiffTest.kt  AllProjectStructuresProviderTest.kt
plugin-bsp/src/test/kotlin/org/jetbrains/plugins/bsp/workspace/: BspProjectDirectoriesWorkspaceFileIndexContributorTest.kt
plugin-bsp/src/testFixtures/kotlin/org/jetbrains/plugins/bsp/projectStructure/: TestableProjectStructure.kt
plugin-bsp/src/testFixtures/kotlin/org/jetbrains/workspace/model/constructors/: BspModel.kt
plugin-bsp/tools/intellij/: .managed.bazelproject
plugin-bsp/workspacemodel/src/main/kotlin/org/jetbrains/workspacemodel/entities/: AndroidAddendumEntity.kt  BspProjectDirectoriesEntity.kt  JvmBinaryJarsEntity.kt
(+141 files in other folders)
